# substrate-multisig

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: cli.rs  command.rs  service.rs
pallets/multisig/: Cargo.toml
pallets/multisig/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
