[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-multisig-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-multisig-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-multisig-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
